patches-dsl/tests/fixtures/errors/unclosed_param_block.patches
# error: unclosed_param_block — param block { with no closing }
patch {
    module osc : Osc { frequency: 440.0
    module out : AudioOut

    osc.sine -> out.in_left
}
